--- a/exercícios/ex022/fundo001.html
+++ b/exercícios/ex022/fundo001.html
@@ -8,6 +8,9 @@
     <style>
         div.quadrado {
             border: 1px solid black;
+            width: 300px;
+            height: 300px;
+            
         }
     </style>
 </head>
