--- a/Projetos/projeto-login/cadastro.html
+++ b/Projetos/projeto-login/cadastro.html
@@ -25,8 +25,7 @@
                 <label for="email">Email</label>
                 <input type="email" name="email" placeholder="Email">
             </div>
-        </fieldset>
-            <div class="área">
+            <div class="tecnologia">
                 <label>Qual área da programação você atua?</label><br>
                 <select class="selecione">
                     <option>Selecione</option>
@@ -35,29 +34,35 @@
                     <option>Fullstack</option>
                 </select>
             </div>
-            <fieldset>
                 <div class="tecnologia">
                     <label>Qual linguagem você prefere?</label><br></br>
                     <label for="tecnologia1">Html
                         <input type="checkbox" name="tecnologia1" value="HTML">
+                    <br>
                     </label>
                     <label for="tecnologia2">Css
                         <input type="checkbox" name="tecnologia2" value="CSS">
+                    <br>
                     </label>
                     <label for="tecnologia3">JavaScript
                         <input type="checkbox" name="tecnologia3" value="JAVASCRIPT">
+                    <br>
                     </label>
                     <label for="tecnologia4">Java
                         <input type="checkbox" name="tecnologia4" value="JAVA">
+                    <br>
                     </label>
                     <label for="tecnologia5">PHP
                         <input type="checkbox" name="tecnologia5" value="PHP">
+                    <br>
                     </label>
                     <label for="tecnologia6">React.js
                         <input type="checkbox" name="tecnologia6" value="React.js">
+                    <br>
                     </label>
                     <label for="tecnologia7">Outro
                     <textarea name="tecnologia7" value="Outro" cols="20" rows="5"></textarea>
+                    <br>
                     </label>
                 </div>
             </fieldset>
