--- a/Projetos/projeto-login/login.html
+++ b/Projetos/projeto-login/login.html
@@ -5,24 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="login.css">
     <link rel="shortcut icon" href="developer-icon-free-vector.jpg"image/x-icon">
 </head>
 <body>
-    <header>
-        <h1>Login Devs</h1>
-        <p>Faça o login para ter acesso</p>
-    </header>
-    <form>
-        <fieldset>
-            <label>Email</label>
-            <input type="email" name="email" placeholder="Email" class="emaillg"><br>
-            <label>Senha</label>
-            <input type="password" name="senha" placeholder="Senha" class="senhalg">
-        </fieldset>
-        <footer>
-            <p>Não tem conta? <a href="cadastro.html" target="_blank">Faça o seu cadastro</a></p>
-        </footer>
-    </form>
+    <div>
+        <header>
+            <h1>Login Devs</h1>
+            <p>Faça o login para ter acesso</p>
+        </header>
+        <form>
+            <fieldset>
+                <label>Email</label>
+                <input type="email" name="email" placeholder="Email" class="emaillg"><br>
+                <label>Senha</label>
+                <input type="password" name="senha" placeholder="Senha" class="senhalg">
+            </fieldset>
+            <footer>
+                <p>Não tem conta? <a href="cadastro.html" target="_blank">Faça o seu cadastro</a></p>
+            </footer>
+        </form>
+    </div>
 </body>
 </html>
