projeto login/cadastro

--- a/Projetos/projeto-login/cadastro.html
+++ b/Projetos/projeto-login/cadastro.html
@@ -9,12 +9,12 @@
     <link rel="shortcut icon" href="developer-icon-free-vector.jpg" type="image/x-icon">
 </head>
 <body>
-    <header>
+    <div class="main-cadastro">
         <h1>Cadastro Devs</h1>
         <p>Faça seu cadastro</p>
-    </header>
-    <form>
-        <fieldset>
+    </div>
+    <div>
+        <div>
             <div class="nome">
                 <label for="nome">Nome</label>
                 <input type="text" name="nome" placeholder="Nome"><br>
