--- a/Projetos/projeto-login/login.html
+++ b/Projetos/projeto-login/login.html
@@ -9,22 +9,28 @@
     <link rel="shortcut icon" href="developer-icon-free-vector.jpg"image/x-icon">
 </head>
 <body>
-    <div>
-        <header>
-            <h1>Login Devs</h1>
-            <p>Faça o login para ter acesso</p>
-        </header>
-        <form>
-            <fieldset>
-                <label>Email</label>
-                <input type="email" name="email" placeholder="Email" class="emaillg"><br>
-                <label>Senha</label>
-                <input type="password" name="senha" placeholder="Senha" class="senhalg">
-            </fieldset>
-            <footer>
-                <p>Não tem conta? <a href="cadastro.html" target="_blank">Faça o seu cadastro</a></p>
-            </footer>
-        </form>
+    <div class="main-login">
+        <div class="left-login">
+            <h1>Faça o login<br> para ter acesso</h1>
+            <img src="Hand coding-bro.png" class="left-login-image" alt="developer">
+        </div>
+        <div class="right-login">
+            <div class="card-login">
+                <h1>LOGIN</h1>
+                <div class="textfield">
+                    <label>Email</label>
+                    <input type="email" name="email" placeholder="Email" class="emaillg"><br>
+                </div>
+                <div class="textfield">
+                    <label>Senha</label>
+                    <input type="password" name="senha" placeholder="Senha" class="senhalg">
+                </div>
+                <button class="btn-login">Login</button>
+                <div class="cadastro">
+                    <p>Não tem conta? <a href="cadastro.html" target="_blank">Faça o seu cadastro</a></p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
