--- a/Projetos/projeto-login/cadastro.html
+++ b/Projetos/projeto-login/cadastro.html
@@ -38,35 +38,8 @@
                         </select>
                     </div>
                         <div class="tecnologia">
-                            <label>Qual linguagem você prefere?</label><br></br>
-                            <label for="tecnologia1">Html
-                                <input type="checkbox" name="tecnologia1" value="HTML">
-                            <br>
-                            </label>
-                            <label for="tecnologia2">Css
-                                <input type="checkbox" name="tecnologia2" value="CSS">
-                            <br>
-                            </label>
-                            <label for="tecnologia3">JavaScript
-                                <input type="checkbox" name="tecnologia3" value="JAVASCRIPT">
-                            <br>
-                            </label>
-                            <label for="tecnologia4">Java
-                                <input type="checkbox" name="tecnologia4" value="JAVA">
-                            <br>
-                            </label>
-                            <label for="tecnologia5">PHP
-                                <input type="checkbox" name="tecnologia5" value="PHP">
-                            <br>
-                            </label>
-                            <label for="tecnologia6">React.js
-                                <input type="checkbox" name="tecnologia6" value="React.js">
-                            <br>
-                            </label>
-                            <label for="tecnologia7">Outro
-                            <textarea name="tecnologia7" value="Outro" cols="20" rows="5"></textarea>
-                            <br>
-                            </label>
+                        <label>Diga um pouco de sua experiência na programação</label>
+                        <textarea name="experiência" value="experiência" cols="30" rows="10"></textarea>
                         </div>
                         <button class="btn-cadastro">Enviar</button>
                     </div>
