imagens de fundo fixas

--- a/exercícios/ex022/fundo006.html
+++ b/exercícios/ex022/fundo006.html
@@ -4,15 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Fundo fixo de tela</title>
     <style>
         body {
             height: 100vh;
-            background-color: black;
+            /*background-color: black;
             background-image: url('imagens/wallpaper002.jpg');
             background-position: center center;
             background-repeat: no-repeat;
             background-size: cover;
+            background-attachment: fixed;*/
+            
+        /*Shorthand - background
+            color < image < position < repeat < [size] < attachment
+        */
+
+        background: black url('imagens/wallpaper002.jpg') center center no-repeat fixed;
+        background-size: cover;
         }
 
         main {
@@ -29,6 +37,10 @@
     <main>
         <h1>Teste de imagem de fundo</h1>
         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nesciunt dignissimos excepturi repudiandae unde ipsa rem laboriosam mollitia magni qui explicabo inventore, numquam vel iste ex exercitationem dolorem deleniti veniam. Voluptatibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Placeat atque voluptate quo earum fugit, repellendus ratione modi a praesentium asperiores consequatur expedita, nemo officiis fuga consectetur neque labore assumenda nam? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vero nulla ducimus nostrum natus saepe eum. Obcaecati facere ipsa exercitationem quisquam soluta eos numquam repellendus voluptas quae, reprehenderit corrupti natus distinctio!</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptates enim ipsam exercitationem consectetur! Odit aliquid ea, odio iure maxime hic nulla perferendis voluptate libero consequuntur aliquam sapiente ratione architecto rerum? Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ipsum animi quidem optio odio expedita, tempore sed sequi rem. Recusandae adipisci doloribus ipsam nulla corrupti ex ipsum officia facilis in earum. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nihil maxime rerum commodi iusto animi porro pariatur eveniet quasi quam, dicta ducimus deleniti soluta, aperiam sunt quia esse natus inventore expedita.</p>
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quas rerum laboriosam perferendis excepturi iste tenetur repudiandae consectetur deserunt iure. Earum neque possimus ad veritatis sequi, voluptas maiores dignissimos consequatur ex? Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate enim nihil ea veniam! Odit temporibus eaque in quidem inventore architecto sapiente perferendis facere dolor qui non quis, quia magnam earum! Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet inventore eius minus at voluptate natus possimus architecto qui earum ipsum odit perferendis explicabo voluptas, rem, optio nobis numquam facere asperiores.</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum rem deserunt ratione nulla aut, ullam tempora, eos nostrum ut reprehenderit necessitatibus officia doloremque, perspiciatis molestiae. Quasi voluptatibus quibusdam repudiandae atque. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Modi, doloremque assumenda vero facere ipsa impedit non earum ipsam eaque aperiam aspernatur sunt molestiae iure, mollitia ad magni, neque accusantium. Non. Lorem ipsum dolor sit amet consectetur adipisicing elit. Modi optio officia dignissimos fugiat vitae nisi natus tempore reprehenderit architecto doloremque veritatis ad aut porro, hic doloribus iure, exercitationem corrupti laborum!</p>
+        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aliquam earum maxime saepe quae explicabo assumenda. Cupiditate, provident. Nihil architecto libero, adipisci quisquam, minus laborum dignissimos voluptate odio iusto temporibus voluptatibus? Lorem ipsum dolor sit amet consectetur adipisicing elit. Aspernatur inventore iure hic saepe beatae, placeat amet aliquid asperiores nisi tenetur magni, possimus dolorem eius laborum mollitia dignissimos error quos molestiae? Lorem ipsum, dolor sit amet consectetur adipisicing elit. Molestias, aut magni? Totam, dicta. Non odio amet commodi ullam, expedita ipsam modi vel velit magnam ad sint aliquid, fugiat inventore omnis.</p>
     </main>
 </body>
 </html>
