--- a/Projetos/projeto-receita/hardware.html
+++ b/Projetos/projeto-receita/hardware.html
@@ -9,15 +9,23 @@
 <body>
     <header>
         <img src="" alt="">
-        <h1>A evolução do Hardware</h1>
+        <h1>A Evolução do Hardware</h1>
     </header>
-    <main>
         <nav>
             <a href="#">Home</a>
             <a href="#">Curiosidades</a>
             <a href="#">Fale Conosco</a>
         </nav>
-        
-    </main>
+        <main>
+            <article>
+
+            </article>
+            <aside>
+
+            </aside>
+        </main>
+        <footer>
+
+        </footer>
 </body>
 </html>
