--- a/Projetos/projeto-receita/hardware.html
+++ b/Projetos/projeto-receita/hardware.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <img src="" alt="">
-        <h1>A Evolução do Hardware</h1>
+        <h1>Tudo sobre Hardware</h1>
     </header>
         <nav>
             <a href="#">Home</a>
