--- a/Projetos/projeto-xiaomi/hardware.html
+++ b/Projetos/projeto-xiaomi/hardware.html
@@ -5,27 +5,18 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Loja</title>
+    <link rel="stylesheet" href="loja.css">
 </head>
 <body>
     <header>
         <img src="" alt="">
-        <h1>Tudo sobre Hardware</h1>
+        <h1>Curiosidades sobre a Xiaomi</h1>
+        <p>Tudo que você não sabia sobre a Xiaomi</p>
     </header>
         <nav>
             <a href="#">Home</a>
             <a href="#">Curiosidades</a>
             <a href="#">Fale Conosco</a>
         </nav>
-        <main>
-            <article>
-
-            </article>
-            <aside>
-
-            </aside>
-        </main>
-        <footer>
-
-        </footer>
 </body>
 </html>
