--- a/Projetos/projeto-xiaomi/xiaomi.html
+++ b/Projetos/projeto-xiaomi/xiaomi.html
@@ -18,5 +18,37 @@
             <a href="#">Curiosidades</a>
             <a href="#">Fale Conosco</a>
         </nav>
+        <main>
+            <article>
+                <h2>De onde surgiu?</h2>
+                <p>A <strong>Xiaomi</strong> é uma empresa chinesa criada em 2010 que rapidamente se tornou uma das gigantes da tecnologia. Em 2018, a companhia foi a quarta maior em vendas de celulares no mundo, atrás apenas de <strong>Samsung</strong>, <strong>Apple</strong> e <strong>Huawei</strong>. Além disso, é uma das maiores startups de tecnologia do planeta e chegou a ocupar o topo do ranking em 2014.</p>
+
+                [img]
+
+                <p>Mesmo com poucos anos de mercado, a <strong>Xiaomi</strong> possui diversas histórias curiosas. Você sabia, por exemplo, que o logo da empresa tem um significado secreto, seus produtos possuem um limite de 5% de lucro e que seu fundador é considerado o <strong>Steve Jobs</strong> da China?</p>
+
+                
+                <h2>1. Nome repleto de significados</h2>
+                <p>Em tradução literal, a palavra “<a href="#">xiaomi</a>” significa "<a href="#">milhete</a>" em <a href="#">mandarim</a>, um tipo de cereal muito consumido na China. Há quem diga que essa é uma referência à <a href="#">Apple</a>, outra marca de eletrônicos que tem um alimento no nome. Mas não é só isso: outra interpretação diz que "Xiao" significa "pequeno" e "Mi", "arroz". Assim, o nome da empresa faria menção a um ditado <a href="#">budista</a> que diz que “um pequeno grão de arroz é tão grandioso quanto uma montanha” e que, por isso, uma das filosofias da empresa seria trabalhar aos poucos e em pequenas coisas.</p>
+
+                <p>Por outro lado, a própria Xiaomi afirma que a sílaba "Mi" pode significar tanto "Mobile Internet" ("<a href="#">Internet móvel</a>", em <a href="#">inglês</a>) quanto "Missão Impossível", se referindo aos obstáculos que a empresa já passou. Assim como o nome possui várias interpretações, a pronúncia também é alvo de certa controvérsia. Dependendo da região da China, <a href="#">Xiaomi</a> pode ser dito de diversas formas. Por isso, o ex-<a href="#">CEO</a> da empresa, o brasileiro Hugo Barra, costumava dizer em entrevistas que a pronúncia mais correta para não-chineses é "Xiáo Mi".</p>
+
+                <h2>2. Imagem secreta e mascote</h2>
+
+                <p>O famoso logo laranja da Xiaomi possui um segredo escondido. Se virarmos a imagem de ponta-cabeça, o MI se assemelha ao ideograma 心, que significa coração em chinês. Além disso, outra imagem conhecida da companhia é seu mascote, o coelho Mitu. Usando uma ushanka (chapéu típico da Rússia) e um lenço vermelho no pescoço, o bichinho já apareceu em alguns desenhos animados promocionais da fabricante e até virou inspiração para uma caixa de som Bluetooth para crianças.</p>
+
+                <h3>3. Seu fundador é o "Steve Jobs da China"</h3>
+                <p>O CEO da Xiaomi, o chinês Lei Jun, nunca negou sua admiração pela Apple — e não por acaso é chamado de Steve Jobs da China. Em 1987, quando ainda era um estudante de Ciência da Computação, ele leu o livro "Fire in the Valley", que conta a história dos primeiros computadores pessoais, com foco no surgimento da Microsoft e da Apple. Em 1999, o livro deu origem ao filme Piratas do Vale do Silício.</p>
+                
+                <p>De acordo com Lei Jun, a história da Apple foi a inspiração para que ele virasse empreendedor. A admiração é tanta que o CEO da Xiaomi já apresentou diversos keynotes trajando o tradicional “uniforme” de Steve Jobs, com uma camisa preta e calça jeans azul. Em 2014, a empresa chegou a convidar Steve Wozniak, co-fundador da Apple, para conhecer sua sede em Pequim. Como bom visitante, Wozniak elogiou os produtos da companhia e previu: ”A Xiaomi é boa o bastante para implodir o mercado norte-americano de smartphones”.</p>
+
+            </article>
+            <aside>
+
+            </aside>
+        </main>
+        <footer>
+            <p>Site criado por Mario Leandro</p>
+        </footer>
 </body>
 </html>
