--- a/Projetos/projeto-xiaomi/xiaomi.html
+++ b/Projetos/projeto-xiaomi/xiaomi.html
@@ -112,9 +112,9 @@
 
                     <p>Outro produto inusitado é o ukulele inteligente Mi Populele. também pode ser pareado com um smartphone e ainda auxilia pessoas que queiram aprender a tocar o instrumento. Seu braço possui lâmpadas de LED que brilham de acordo com os acordes mostrados no celular, então, é só seguir as instruções para tocar a música de sua escolha. O Populele pode ser importado por cerca de R$ 358.</p>
             </article>
-            <aside>
+            <!-- <aside>
                 <h3></h3>
-            </aside>
+            </aside> -->
         </main>
         <footer>
             <p>Site criado por Mario Leandro</p>
