--- a/Projetos/projeto-xiaomi/xiaomi.html
+++ b/Projetos/projeto-xiaomi/xiaomi.html
@@ -10,17 +10,18 @@
 </head>
 <body>
     <header>
-        <h1>Curiosidades sobre a Xiaomi</h1>
-        <p>Tudo que você não sabia sobre a Xiaomi</p>
+        <h1>Curiosidades.com</h1>
     </header>
-        <nav>
-            <a href="#">Home</a>
-            <a href="#">Curiosidades</a>
-            <a href="#">Fale Conosco</a>
-        </nav>
+            <nav class="link">
+                <a href="#">Home</a>
+                <a href="#">Notícias</a>
+                <a href="#">Curiosidades</a>
+                <a href="#">Fale Conosco</a>
+            </nav>
         <main>
             <article>
-                <h1>De onde surgiu?</h1>
+                <h1>Curiosidades sobre a Xiaomi</h1>
+                <h2>De onde surgiu?</h2>
                     <p>A <strong><a href="https://www.techtudo.com.br/tudo-sobre/xiaomi/" target="_blank">Xiaomi</a></strong> é uma empresa chinesa criada em 2010 que rapidamente se tornou uma das gigantes da tecnologia. Em 2018, a companhia foi a quarta maior em vendas de celulares no mundo, atrás apenas de <strong><a href="https://www.techtudo.com.br/tudo-sobre/samsung/" target="_blank">Samsung</a></strong>, <strong><a href="https://www.techtudo.com.br/tudo-sobre/apple/" target="_blank">Apple</a></strong> e <strong><a href="https://www.techtudo.com.br/tudo-sobre/huawei/" target="_blank">Huawei</a></strong>. Além disso, é uma das maiores startups de tecnologia do planeta e chegou a ocupar o topo do ranking em 2014.</p>
 
                     <p>Mesmo com poucos anos de mercado, a <strong>Xiaomi</strong> possui diversas histórias curiosas. Você sabia, por exemplo, que o logo da empresa tem um significado secreto, seus produtos possuem um limite de 5% de lucro e que seu fundador é considerado o <strong>Steve Jobs</strong> da China?</p>
@@ -88,7 +89,7 @@
 
                 <h2>7. Lucro é limitado a 5%</h2>
                     <p>A Xiaomi leva a sério a ideia de oferecer produtos premium por preços baixos. Em abril de 2018, o presidente Lei Jun anunciou que todos hardwares da marca teriam um lucro líquido máximo de 5%. A medida passou a valer para todas as linhas, desde smartphones até produtos para o dia a dia.</p>
-                 <p>Apesar do gesto de transparência, analistas afirmam que, na verdade, poucas empresas de tecnologia conseguem lucros maiores do que 5% em seus smartphones — Apple e Samsung são algumas exceções. Por isso, muitos acreditam que a medida não faz tanta diferença, e que a aposta da Xiaomi para aumentar sua renda está mais em serviços via Internet, como streaming de vídeo e anúncios em redes sociais.</p>
+                    <p>Apesar do gesto de transparência, analistas afirmam que, na verdade, poucas empresas de tecnologia conseguem lucros maiores do que 5% em seus smartphones — Apple e Samsung são algumas exceções. Por isso, muitos acreditam que a medida não faz tanta diferença, e que a aposta da Xiaomi para aumentar sua renda está mais em serviços via Internet, como streaming de vídeo e anúncios em redes sociais.</p>
 
                 <h2>8. Marketing boca a boca</h2>
                     <p>Diferente de outras empresas, a Xiaomi não investe milhões em propagandas nem aparece em filmes famosos. O segredo para o sucesso é o marketing boca a boca. A marca investiu em sua base de fãs, que postam reviews em sites, redes sociais e no YouTube, e, por isso, gastou muito pouco em anúncios para virar uma gigante dos eletrônicos.</p>
@@ -117,7 +118,7 @@
             </aside> -->
         </main>
         <footer>
-            <p>Site criado por Mario Leandro</p>
+            <p>Site criado por <a href="https://www.instagram.com/mario.leandro085/" target="_blank">Mario Leandro</a></p>
         </footer>
 </body>
 </html>
