--- a/Projetos/projeto-xiaomi/xiaomi.html
+++ b/Projetos/projeto-xiaomi/xiaomi.html
@@ -26,7 +26,7 @@
 
                     <p>Mesmo com poucos anos de mercado, a <strong>Xiaomi</strong> possui diversas histórias curiosas. Você sabia, por exemplo, que o logo da empresa tem um significado secreto, seus produtos possuem um limite de 5% de lucro e que seu fundador é considerado o <strong>Steve Jobs</strong> da China?</p>
 
-                        <picture><
+                        <picture>
                             <source media="(max-width: 670)" srcset="imagens/imagem01.jpg" type="image/jpg">
                             <img src="imagens/imagem01.jpg" class="pequena1" alt="redmi note 11" width="500">
                         </picture>
