--- a/Projetos/projeto-loja/index.html
+++ b/Projetos/projeto-loja/index.html
@@ -4,9 +4,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Loja</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Freestyle Models</h1>
+        <label for="pesquisa">
+            <input type="search" name="pesquisa" id="pesquisa" placeholder="Pesquisar">
+        </label>
+        <input type="button" value="&#128270;" id="btn">
+    </header>
+    <nav>
+        <a href="#">Home</a>
+        <a href="#">Roupas</a>
+        <a href="#">Calças</a>
+        <a href="#">Sapatos</a>
+    </nav>
+    <main>
+        
+    </main>
 </body>
 </html>
