--- a/Projetos/projeto-loja/index.html
+++ b/Projetos/projeto-loja/index.html
@@ -1,28 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Loja</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="imagens/logo-loja.png" type="image/x-icon">
+    <title>Loja</title>
 </head>
 <body>
     <header>
-        <h1>Freestyle Models</h1>
-        <label for="pesquisa">
-            <input type="search" name="pesquisa" id="pesquisa" placeholder="Pesquisar">
-        </label>
-        <input type="button" value="&#128270;" id="btn">
+        <div class="cabeça">
+            <div class="logo-left"><img src="imagens/logo-loja.png" alt="logo da loja" width="100"></div><!--Logo-->
+                <div class="search-box"><!--Pesquisa-->
+                    <input class="search-txt" type="text" name="pesquisa" placeholder="Pesquisar">
+                    <a class="search-btn" href="#"></a>
+                </div>
+            <div class="menu"><!--Menu-->
+                <a href="#">Lançamento</a>
+                <a href="#">Kids</a>
+                <a href="#">Moda</a>
+                <a href="#">Calçados</a>
+            </div>
+        </div>
     </header>
-    <nav>
-        <a href="#">Home</a>
-        <a href="#">Roupas</a>
-        <a href="#">Calças</a>
-        <a href="#">Sapatos</a>
-    </nav>
-    <main>
-        
-    </main>
 </body>
 </html>
