projeto-incompleto-loja

--- a/Projetos/projeto-loja/index.html
+++ b/Projetos/projeto-loja/index.html
@@ -12,17 +12,22 @@
     <header>
         <div class="cabeça">
             <div class="logo-left"><img src="imagens/logo-loja.png" alt="logo da loja" width="100"></div><!--Logo-->
-                <div class="search-box"><!--Pesquisa-->
-                    <input class="search-txt" type="text" name="pesquisa" placeholder="Pesquisar">
-                    <a class="search-btn" href="#"></a>
-                </div>
-            <div class="menu"><!--Menu-->
-                <a href="#">Lançamento</a>
-                <a href="#">Kids</a>
-                <a href="#">Moda</a>
-                <a href="#">Calçados</a>
+            <div class="search-box"><!--Pesquisa-->
+                <input class="search-txt" type="text" name="pesquisa" placeholder="Pesquisar">
             </div>
         </div>
     </header>
+        <div class="menu"><!--Menu-->
+            <a href="#">Lançamento</a>
+            <a href="#">Kids</a>
+            <a href="#">Moda</a>
+            <a href="#">Calçados</a>
+        </div>
+    <main>
+        <div class="promoção">
+            <img src="imagens/Roupas/camisa-livefreestyle.jpg" alt="livefreestyle" width="250px">
+            <img src="" alt="">
+        </div>
+    </main>
 </body>
 </html>
