--- a/Projetos/projeto-loja/index.html
+++ b/Projetos/projeto-loja/index.html
@@ -24,9 +24,19 @@
             <a href="#">Calçados</a>
         </div>
     <main>
-        <div class="promoção">
-            <img src="imagens/Roupas/camisa-livefreestyle.jpg" alt="livefreestyle" width="250px">
-            <img src="" alt="">
+        <div class="lançamento">
+            <h1>Lançamentos</h1>
+            <div class="promoção">
+                <img src="imagens/Roupas/camisa-livefreestyle.jpg" alt="camisa #livefreestyle" width="300">
+                <p>Camisa #LIVE Freestyle Masculina<br>R$ 34,99</p>
+            </div>
+            <div class="promoção1">
+                <img src="imagens/Roupas/camisa-freestylezone-marineblue.jpg" alt="camisa freestyle azul" width="300">
+                <p>Camisa Freestyle Scooter<br>R$ 34,99</p>
+            </div>
+            <div>
+
+            </div>
         </div>
     </main>
 </body>
