--- a/Projetos/projeto-loja/index.html
+++ b/Projetos/projeto-loja/index.html
@@ -28,14 +28,19 @@
             <h1>Lançamentos</h1>
             <div class="promoção">
                 <img src="imagens/Roupas/camisa-livefreestyle.jpg" alt="camisa #livefreestyle" width="300">
-                <p>Camisa #LIVE Freestyle Masculina<br>R$ 34,99</p>
+                <p>Camisa #LIVE Freestyle Masculina<br>R$ 39,99</p>
             </div>
-            <div class="promoção1">
+            <div class="promoção">
                 <img src="imagens/Roupas/camisa-freestylezone-marineblue.jpg" alt="camisa freestyle azul" width="300">
-                <p>Camisa Freestyle Scooter<br>R$ 34,99</p>
+                <p>Camisa Freestyle Scooter<br>R$ 59,99</p>
             </div>
-            <div>
-
+            <div class="promoção">
+                <img src="imagens/Roupas/camisa-motocross-basica.jpg" alt="camisa motocross freestyle" width="300">
+                <p>Camisa Freestyle Motocross<br>R$ 49,99</p>
+            </div>
+            <div class="promoção">
+                <img src="imagens/Roupas/camisa-bmx-freestyle.jpg" alt="camisaBMX" width="300">
+                <p>Camisa BMX Freestyle<br>R$69,99</p>
             </div>
         </div>
     </main>
