--- a/Projetos/redes-sociais/index.html
+++ b/Projetos/redes-sociais/index.html
@@ -15,34 +15,34 @@
         <main>
             <h2>Quem sou eu?</h2>
             
-            <img src="minhafoto.jpg" alt="minha foto">
+            <img src="imagens/minhafoto.jpg" alt="minha foto">
             
                 <p>Meu nome é Mario Leandro, sou estudante de programação e estou aprendendo com o Gustavo Guanabara do canal Curso Em Video</p>
                 <h3>Como Falar Comigo</h3>
         </main>
             <div class="links-rs">
                 <div class="links">
-                    <a href="https://instagram.com/mario.leandro085" target="_blank"> <img src="icone-instagram.png" alt="instagram"> Intagram</a>
+                    <a href="https://instagram.com/mario.leandro085" target="_blank"> <img src="imagens/icone-instagram.png" alt="instagram"> Intagram</a>
                 </div>
                 <br>
                 <div class="links">
-                    <a href="https://www.facebook.com/profile.php?id=100013648533009" target="_blank"><img src="icone-facebook.png" alt="facebook">Facebook</a>
+                    <a href="https://www.facebook.com/profile.php?id=100013648533009" target="_blank"><img src="imagens/icone-facebook.png" alt="facebook">Facebook</a>
                 </div>
                 <br>
                 <div class="links">
-                    <a href="https://github.com/Leandro085" target="_blank"><img src="icone-github.png" alt="github">Github</a>
+                    <a href="https://github.com/Leandro085" target="_blank"><img src="imagens/icone-github.png" alt="github">Github</a>
                 </div>
                 <br>
                 <div class="links">
-                    <a href="https://twitter.com/LEOX_O_MALA" target="_blank"><img src="icone-twitter.png" alt="twitter">Twitter</a>
+                    <a href="https://twitter.com/LEOX_O_MALA" target="_blank"><img src="imagens/icone-twitter.png" alt="twitter">Twitter</a>
                 </div>
                 <br>
                 <div class="links">
-                    <a href="https://www.linkedin.com/in/mario-leandro-41667b185/" target="_blank"><img src="icone-linkedin.png" alt="linkedin">Linkedin</a>
+                    <a href="https://www.linkedin.com/in/mario-leandro-41667b185/" target="_blank"><img src="imagens/icone-linkedin.png" alt="linkedin">Linkedin</a>
                 </div>
                 <br>
                 <div class="links">
-                    <a href="https://www.youtube.com/channel/UCajZdcabpwBnl1j-hz7nYVQ" target="_blank"><img src="icone-youtube.png" alt="youtube">YouTube</a>
+                    <a href="https://www.youtube.com/channel/UCajZdcabpwBnl1j-hz7nYVQ" target="_blank"><img src="imagens/icone-youtube.png" alt="youtube">YouTube</a>
                 </div>
             </div>
         </div>
