--- a/exercícios/ex023/index.html
+++ b/exercícios/ex023/index.html
@@ -12,21 +12,15 @@
         
         table {
             width: 400px;
+            height: 400px;
             border-collapse: collapse;
-            border: 5px solid red;
-        }
-
-        tr.linha {
-            background-color: gray;
         }
 
         td {
             border: solid black;
             padding: 8px;
-        }
-
-        td.dado {
-            background-color: yellow;
+            text-align: center; /*alinhamento Horizontal*/
+            vertical-align: top;
         }
     </style>
 </head>
@@ -44,7 +38,7 @@
             <td>B1</td>
             <td>C1</td>
         </tr>
-        <tr class="linha"> <!-- Segunda Linha -->
+        <tr> <!-- Segunda Linha -->
             <td>A2</td>
             <td>B2</td>
             <td>C2</td>
@@ -56,7 +50,7 @@
         </tr>
         <tr> <!-- Quarta Linha -->
             <td>A4</td>
-            <td class="dado">B4</td>
+            <td>B4</td>
             <td>C4</td>
         </tr>
     </table>
