--- a/Projetos/projeto-lauding/index.html
+++ b/Projetos/projeto-lauding/index.html
@@ -17,7 +17,7 @@
         <br>
         <div class="tabela">
             <table class="tb1">
-                <tr>Configurações do PC</tr><!--Primeira linha-->
+                <tr class="sinopse">Configurações do PC</tr><!--Primeira linha-->
                     <td>Processador:</td>
                     <td>AMD Ryzen 3 3250U</td>
                 </tr>
@@ -35,7 +35,7 @@
                 </tr>
             </table>
             <table class="tb2">
-                <tr>Periféricos</tr>
+                <tr class="sinopse">Periféricos</tr>
                     <td>Teclado</td>
                     <td>Goldentec GT850 (membrana)</td>
                 <tr>
@@ -49,7 +49,7 @@
             </table>
         </div>
         <h2>Configurações de video dentro e fora do jogo</h2>
-        <p>Asconfigurações mostradas serão do software da placa de video AMD (Adrenalin Edition), e das configurações de video no jogo, por exemplo, largura de tela, </p>
+        <p>As configurações mostradas serão do software da placa de video AMD (Adrenalin Edition), e das configurações de video no jogo, por exemplo, largura de tela, </p>
 
         <h3>
             <a href="index2.html" target="_blank">Clique aqui para ver as imagens</a>
