--- a/exercícios/ex023/tabela002.html
+++ b/exercícios/ex023/tabela002.html
@@ -12,6 +12,7 @@
 
         table {
             width: 500px;
+            position: relative;
         }
 
         td, th {
@@ -19,9 +20,34 @@
             padding: 10px;
         }
 
-        thead {
-            background-color: gray;
+        caption {
+            font-size: 1.5em;
+            font-weight: bold;
+            padding: 10px;
+            background-color: lightgray;
+        }
+
+        thead, tfoot {
+            background-color: #383838;
             color: white;
+        }
+
+        thead > tr > th{
+            position: sticky;
+            top: 0;
+            background-color: #383838;
+        }
+
+        tbody > tr:nth-child(odd) { /* 2n-1 */
+            background-color: white;
+        }
+
+        tbody > tr:nth-child(even) { /* 2n */
+            background-color: lightgray;
+        }
+
+        td.num {
+            text-align: right;
         }
     </style>
 </head>
@@ -30,6 +56,7 @@
     <!--
         Anatomia de tabelas grandes
         Table
+            CAPTION
             THEAD
                 TR, TD, TH
             TBODY
@@ -38,128 +65,141 @@
                 TR, TD, TH
     -->
     <table>
+        <caption>População das Unidades Federativas</caption>
         <thead>
             <tr>
-                <th>Estado</th>
-                <th>População</th>
+                <th scope="col">Estado</th>
+                <th scope="col" style="width: 50px;">População</th>
             </tr>
         </thead>
         <tbody>
             <tr>
                 <td>São Paulo</td>
-                <td>44 396 484</td>
+                <td class="num">44 396 484</td>
             </tr>
             <tr>
                 <td>Minas Gerais</td>
-                <td>20 869 101</td>
+                <td class="num">20 869 101</td>
             </tr>
             <tr>
                 <td>Rio de Janeiro</td>
-                <td>16 550 024</td>
+                <td class="num">16 550 024</td>
             </tr>
             <tr>
                 <td>Bahia</td>
-                <td>15 203 934</td>
+                <td class="num">15 203 934</td>
             </tr>
             <tr>
                 <td>Rio Grande do Sul</td>
-                <td>11 247 972</td>
+                <td class="num">11 247 972</td>
             </tr>
             <tr>
                 <td>Paraná</td>
-                <td>11 163 018</td>
+                <td class="num">11 163 018</td>
             </tr>
             <tr>
                 <td>Pernambuco</td>
-                <td>9 345 173</td>
+                <td class="num">9 345 173</td>
             </tr>
             <tr>
                 <td>Ceará</td>
-                <td>8 904 459</td>
+                <td class="num">8 904 459</td>
             </tr>
             <tr>
                 <td>Pará</td>
-                <td>8 175 113</td>
+                <td class="num">8 175 113</td>
             </tr>
             <tr>
                 <td>Maranhão</td>
-                <td>6 904 241</td>
+                <td class="num">6 904 241</td>
             </tr>
             <tr>
                 <td>Santa Catarina</td>
-                <td>6 819 190</td>
+                <td class="num">6 819 190</td>
             </tr>
             <tr>
                 <td>Goiás</td>
-                <td>6 610 681</td>
+                <td class="num">6 610 681</td>
             </tr>
             <tr>
                 <td>Paraíba</td>
-                <td>3 972 202</td>
+                <td class="num">3 972 202</td>
             </tr>
             <tr>
                 <td>Amazonas</td>
-                <td> 3 938 336</td>
+                <td class="num"> 3 938 336</td>
             </tr>
             <tr>
                 <td>Espírito Santo</td>
-                <td>3 929 911</td>
+                <td class="num">3 929 911</td>
             </tr>
             <tr>
                 <td>Rio Grande do Norte</td>
-                <td>3 442 175</td>
+                <td class="num">3 442 175</td>
             </tr>
             <tr>
                 <td>Alagoas</td>
-                <td>3 340 932</td>
+                <td class="num">3 340 932</td>
             </tr>
             <tr>
                 <td>Mato Grosso</td>
-                <td>3 270 973</td>
+                <td class="num">3 270 973</td>
             </tr>
             <tr>
                 <td>Piauí</td>
-                <td>3 204 028</td>
+                <td class="num">3 204 028</td>
             </tr>
             <tr>
                 <td>Distrito Federal</td>
-                <td>2 914 830</td>
+                <td class="num">2 914 830</td>
             </tr>
             <tr>
                 <td>Mato Grosso do Sul</td>
-                <td>2 651 235</td>
+                <td class="num">2 651 235</td>
             </tr>
             <tr>
                 <td>Sergipe</td>
-                <td>2 242 937</td>
+                <td class="num">2 242 937</td>
             </tr>
             <tr>
                 <td>Rondônia</td>
-                <td>1 768 204</td>
+                <td class="num">1 768 204</td>
             </tr>
             <tr>
                 <td>Tocantins</td>
-                <td>1 515 126</td>
+                <td class="num">1 515 126</td>
             </tr>
             <tr>
                 <td>Acre</td>
-                <td>803 513</td>
+                <td class="num">803 513</td>
             </tr>
             <tr>
                 <td>Amapá</td>
-                <td>766 679</td>
+                <td class="num">766 679</td>
             </tr>
             <tr>
                 <td>Roraima</td>
-                <td>505 665</td>
+                <td class="num">505 665</td>
             </tr>
         </tbody>
         <tfoot>
             <tr>
-                <th>Total de Habitantes</th>
-                <td>205.156.587</td>
+                <th scope="row">Total de Habitantes</th>
+                <td class="num">205.156.587</td>
             </tr>
         </tfoot>
     </table>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, id, quis, cumque quo aliquid deserunt modi odio ipsum natus tempore earum vel tempora dolore? Blanditiis suscipit ut nesciunt expedita veniam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam laudantium maiores alias repudiandae officia molestiae, architecto consequuntur animi vel placeat explicabo quis impedit fugit cum vitae asperiores. Quos, asperiores delectus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus eligendi nisi magnam quisquam magni, laboriosam possimus officia, dolor, eius provident tenetur sint pariatur voluptatum molestiae libero vero aspernatur esse deserunt?</p>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, id, quis, cumque quo aliquid deserunt modi odio ipsum natus tempore earum vel tempora dolore? Blanditiis suscipit ut nesciunt expedita veniam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam laudantium maiores alias repudiandae officia molestiae, architecto consequuntur animi vel placeat explicabo quis impedit fugit cum vitae asperiores. Quos, asperiores delectus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus eligendi nisi magnam quisquam magni, laboriosam possimus officia, dolor, eius provident tenetur sint pariatur voluptatum molestiae libero vero aspernatur esse deserunt?</p>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, id, quis, cumque quo aliquid deserunt modi odio ipsum natus tempore earum vel tempora dolore? Blanditiis suscipit ut nesciunt expedita veniam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam laudantium maiores alias repudiandae officia molestiae, architecto consequuntur animi vel placeat explicabo quis impedit fugit cum vitae asperiores. Quos, asperiores delectus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus eligendi nisi magnam quisquam magni, laboriosam possimus officia, dolor, eius provident tenetur sint pariatur voluptatum molestiae libero vero aspernatur esse deserunt?</p>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, id, quis, cumque quo aliquid deserunt modi odio ipsum natus tempore earum vel tempora dolore? Blanditiis suscipit ut nesciunt expedita veniam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam laudantium maiores alias repudiandae officia molestiae, architecto consequuntur animi vel placeat explicabo quis impedit fugit cum vitae asperiores. Quos, asperiores delectus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus eligendi nisi magnam quisquam magni, laboriosam possimus officia, dolor, eius provident tenetur sint pariatur voluptatum molestiae libero vero aspernatur esse deserunt?</p>
+
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, id, quis, cumque quo aliquid deserunt modi odio ipsum natus tempore earum vel tempora dolore? Blanditiis suscipit ut nesciunt expedita veniam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam laudantium maiores alias repudiandae officia molestiae, architecto consequuntur animi vel placeat explicabo quis impedit fugit cum vitae asperiores. Quos, asperiores delectus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus eligendi nisi magnam quisquam magni, laboriosam possimus officia, dolor, eius provident tenetur sint pariatur voluptatum molestiae libero vero aspernatur esse deserunt?</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, id, quis, cumque quo aliquid deserunt modi odio ipsum natus tempore earum vel tempora dolore? Blanditiis suscipit ut nesciunt expedita veniam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam laudantium maiores alias repudiandae officia molestiae, architecto consequuntur animi vel placeat explicabo quis impedit fugit cum vitae asperiores. Quos, asperiores delectus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus eligendi nisi magnam quisquam magni, laboriosam possimus officia, dolor, eius provident tenetur sint pariatur voluptatum molestiae libero vero aspernatur esse deserunt?</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, id, quis, cumque quo aliquid deserunt modi odio ipsum natus tempore earum vel tempora dolore? Blanditiis suscipit ut nesciunt expedita veniam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam laudantium maiores alias repudiandae officia molestiae, architecto consequuntur animi vel placeat explicabo quis impedit fugit cum vitae asperiores. Quos, asperiores delectus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus eligendi nisi magnam quisquam magni, laboriosam possimus officia, dolor, eius provident tenetur sint pariatur voluptatum molestiae libero vero aspernatur esse deserunt?</p>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Doloremque, id, quis, cumque quo aliquid deserunt modi odio ipsum natus tempore earum vel tempora dolore? Blanditiis suscipit ut nesciunt expedita veniam! Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam laudantium maiores alias repudiandae officia molestiae, architecto consequuntur animi vel placeat explicabo quis impedit fugit cum vitae asperiores. Quos, asperiores delectus. Lorem ipsum dolor sit amet consectetur adipisicing elit. Temporibus eligendi nisi magnam quisquam magni, laboriosam possimus officia, dolor, eius provident tenetur sint pariatur voluptatum molestiae libero vero aspernatur esse deserunt?</p>
 </body>
 </html>
